--- a/templates/security/reset_password.html
+++ b/templates/security/reset_password.html
@@ -1,4 +1,5 @@
 
+
 {% extends "base.html" %}
 {% from "helpers.html" import render_field_with_errors, render_field %}
 {% include "security/_messages.html" %}
@@ -6,27 +7,28 @@
  <section class="ct-u-paddingBottom80">
 <div class="container">
     <div class="ct-sectionHeader ct-u-paddingBottom20">
-        <h2>Восстановление пароля</h2>
-Send password reset instructions
+        <h2 class="ct-u-size34">Восстановление пароля</h2>
+
 
 
     </div>
     <div class="row">
         <div class="col-xs-offset-1 col-xs-10">
+    <p class="ct-u-size20">
+
+    </p>
 
 
-
-<form action="{{ url_for_security('forgot_password') }}" method="POST" name="forgot_password_form">
-  {{ forgot_password_form.hidden_tag() }}
+<form action="{{ url_for_security('reset_password', token=reset_password_token) }}" method="POST" name="reset_password_form">
     <div class="form-group">
-        {{ render_field_with_errors(forgot_password_form.email, class="form-control") }}
+          {{ reset_password_form.hidden_tag() }}
+        {{ render_field_with_errors(reset_password_form.password, label = "Новый пароль", class="form-control") }}
+            {{ render_field_with_errors(reset_password_form.password_confirm, label = "Повторите пароль", class="form-control") }}
 
 
 
-  {{ render_field(forgot_password_form.submit, class="btn btn-motive btn-form", value="отправить") }}
-
-
-  </div>
+  {{ render_field(reset_password_form.submit, class="btn btn-motive btn-form", value="отправить") }}
+         </div>
 </form>
 
  </div>
