--- a/templates/user_container/user_contain_post.html
+++ b/templates/user_container/user_contain_post.html
@@ -64,6 +64,8 @@ $(document).ready(function() {
     ShowReactionDiv();
     $("i.favourite.post-fav, i.not-favourite.post-fav").on('click', TogglePostfavour);
     $("li#post_block").on("click", UpdatePostContainer);
+         $("#post_block").on("click", UpdatePostContainer);
+
 
 
 });
