--- a/templates/base.html
+++ b/templates/base.html
@@ -363,11 +363,11 @@
 
 <script>
     {#    script for activate likes and reactions in my.js #}
-    $(document).ready(function () {
-        $("img.unliked, img.liked").on("click", ToggleLikeUnlike);
-        $('.smile').on("click", AddReaction);
-        ShowReactionDiv();
-    });
+    {#$(document).ready(function () {#}
+    {#    $("img.unliked, img.liked").on("click", ToggleLikeUnlike);#}
+    {#    $('.smile').on("click", AddReaction);#}
+    {#    ShowReactionDiv();#}
+    {#{);#}
 
 </script>
 
