--- a/templates/dialogs.html
+++ b/templates/dialogs.html
@@ -22,6 +22,7 @@
                     <div class="one-dialog" id= {{ dialog.id }}>
 
                         <div class="left-image">
+                        <a href="{{ url_for("user", username = users_dict[dialog.id].username) }}">
 
                             {% if users_dict[dialog.id].avatar_min %}
 
@@ -30,6 +31,7 @@
                             {% else %}
                                 <img src="{{ url_for('static',filename= "image/min_icon-user-default.png") }}"/>
                             {% endif %}
+                        </a>
                         </div>
                         <div class="description">
                             <div class="ct-u-floatLeft">
