--- a/templates/single_post.html
+++ b/templates/single_post.html
@@ -334,11 +334,23 @@
 
 <script>
 $(document).ready(function() {
+        {#script for activate likes and reactions in my.js #}
+    $(document).ready(function () {
+        $("img.unliked, img.liked").on("click", ToggleLikeUnlike);
+        $('.smile').on("click", AddReaction);
+        ShowReactionDiv();
+    });
+
 
 
     $(".discussion.post-form.comment-login").on("click", RenderPostCommentForm);
 
 
+});
+$(document).ready(function() {
+    $("i.favourite.post-fav, i.not-favourite.post-fav").on('click', TogglePostfavour);
+
+    $('#button_comment1.post-form.comment-login').on("click", ShowCommentForm);
 });
 
 </script>
