--- a/templates/topic.html
+++ b/templates/topic.html
@@ -141,7 +141,23 @@
     </section>
 
 
+<script>
+$(document).ready(function() {
+        {#script for activate likes and reactions in my.js #}
+    $(document).ready(function () {
+        $("img.unliked, img.liked").on("click", ToggleLikeUnlike);
+        $('.smile').on("click", AddReaction);
+        ShowReactionDiv();
+    });
+});
+$(document).ready(function() {
+    $("i.favourite.post-fav, i.not-favourite.post-fav").on('click', TogglePostfavour);
+        $("i.favourite.product-fav, i.not-favourite.product-fav").on('click', ToggleProductFavour);
 
+
+    $('#button_comment1.post-form.comment-login').on("click", ShowCommentForm);
+});
+</script>
 {% endblock %}
 
 
