--- a/templates/mails/notification_mail.html
+++ b/templates/mails/notification_mail.html
@@ -23,5 +23,9 @@
 
                         {%  endif %}
 
+<p>Не хотите получать уведомления с форума аквариумистики? Ну что ж, это Ваш выбор.
+    Просто поменяйте
+    <a href="{{ url_for("profile_settings",  _external = True )}}">настройки профиля</a>
+</p>
 
 <p>   С найлучшими пожеланиеми, форум аквариумистики</p>
