--- a/templates/popular_product.html
+++ b/templates/popular_product.html
@@ -98,7 +98,18 @@
 
         </div>
     </section>
+<script>
+$(document).ready(function () {
+        $("img.unliked, img.liked").on("click", ToggleLikeUnlike);
+        $('.smile').on("click", AddReaction);
+        ShowReactionDiv();
 
+    $("i.favourite.post-fav, i.not-favourite.post-fav").on('click', TogglePostfavour);
+        $("i.favourite.product-fav, i.not-favourite.product-fav").on('click', ToggleProductFavour);
+
+
+});
+</script>
 {% endblock %}
 
 
