--- a/templates/add_post.html
+++ b/templates/add_post.html
@@ -11,72 +11,128 @@
             </div>
             <div class="row">
                 <div class="col-xs-offset-1 col-xs-10 col-md-offset-2 col-md-8">
-                    <form action="" method="post" class="form-horizontal" enctype=multipart/form-data >
-                        <div class="form-group ct-u-marginBottom0">
-                            {{ form.hidden_tag() }}
-                            {{ render_field_with_errors(form.title, class="form-control") }}
-                            {{ render_field_with_errors(form.body, class="form-control", contenteditable="true") }}
-                        <div class="ct-u-paddingTop20">
-                           <p class="ct-u-motiveLight">По желанию, Вы можете добавить ваш пост к любой из предложенных тем. </p>
-                                                    {{ render_field_with_errors(form.topic_id, class="form-control") }}
 
 
-</div>
+
+
+
+                        <form action="" method="post" class="form-horizontal form_edited" enctype=multipart/form-data>
+
+                            <div class="form-group ct-u-marginBottom0">
+
+                                {{ form.hidden_tag() }}
+                                {{ render_field_with_errors(form.title, class="form-control") }}
+
+
+                            </div>
+
+
+
+
+                                           <div id="editor" class="editing-container" contenteditable="false">
+
+  <section id="toolbar">
+
+
+    <div id="bold" class="icon fa fa-bold"></div>
+
+    <div id="italic" class="icon fa fa-italic"></div>
+
+    <div id="underline" class="icon fa fa-underline"></div>
+    <div id="strikeThrough" class="icon fa fa-strikethrough"></div>
+
+    <div id="createLink" class="icon fa fa-link"></div>
+    <div id="insertUnorderedList" class="icon fa fa-list-ul"></div>
+
+    <div id="insertOrderedList" class="icon fa fa-list-ol"></div>
+
+    <div id="justifyLeft" class="icon fa fa-align-left"></div>
+
+    <div id="justifyRight" class="icon fa fa-align-right"></div>
+    <div id="justifyCenter" class="icon fa fa-align-center"></div>
+
+    <div id="justifyFull" class="icon fa fa-align-justify"></div>
+
+
+
+  </section>
+
+
+
+  <section id="page" contenteditable="true">
+
+
+
+    <p id="page-content"></p>
+
+
+
+  </section>
+
+                    </div>
+                            <div class="edited-textarea">{{ form.body (class="edited-textarea") }}</div>
+                            <div class="ct-u-paddingTop20">
+                                <p class="ct-u-motiveLight">По желанию, Вы можете добавить ваш пост к любой из
+                                    предложенных тем. </p>
+                                {{ render_field_with_errors(form.topic_id, class="form-control") }}
+
+
+                            </div>
 
                             <div id="hide" class="form-group big-form-file">
                                 {{ form.file(id="file", class="inputfile", data_multiple_caption="{count} files selected") }}
-                                                    <div class="ct-u-paddingTop20">
+                                <div class="ct-u-paddingTop20">
 
-                            <p class=" ct-u-motiveLight">
-                                По желанию, выберите несколько тегов к вашему посту (напр."мой аквариум", "аквариум своими руками")
+                                    <p class=" ct-u-motiveLight">
+                                        По желанию, выберите несколько тегов к вашему посту (напр."мой аквариум",
+                                        "аквариум своими руками")
 
-                            </p>
+                                    </p>
 
-                                {% for f in form.tags %}
-                                    <div class="col-md-4">
-                                {{ f (class="tags", rows=1)}}
-                                    <div class="dropdown">
-                                      <a class="dropdown-toggle"  data-toggle="dropdown" href="#"></a>
-                                      <ul class="dropdown-menu tag-menu" id ={{ f.id }} role="menu" aria-labelledby="dLabel">
+                                    {% for f in form.tags %}
+                                        <div class="col-md-4">
+                                            {{ f (class="tags", rows=1) }}
+                                            <div class="dropdown">
+                                                <a class="dropdown-toggle" data-toggle="dropdown" href="#"></a>
+                                                <ul class="dropdown-menu tag-menu" id={{ f.id }} role="menu"
+                                                    aria-labelledby="dLabel">
 
-                                      </ul>
-                                    </div>
+                                                </ul>
+                                            </div>
 
-                                    </div>
-                                {% endfor %}
-                                                    </div>
+                                        </div>
+                                    {% endfor %}
+                                </div>
 
                                 <div id="hide" class="form-group big-form-file ct-clear-both">
-                                {{ form.file(id="file", class="inputfile", data_multiple_caption="{count} files selected") }}
-                                <label for="file" class="hand-cursor">
+                                    {{ form.file(id="file", class="inputfile", data_multiple_caption="{count} files selected") }}
+                                    <label for="file" class="hand-cursor">
                                     <span class="photo_text hidden-xs ct-u-size24"><i class="fa fa-camera ct-u-size30"
                                                                                       aria-hidden="true"></i> Выбрать изображение</span>
 
-                                </label>
-                            </div>
+                                    </label>
+                                </div>
                             </div>
 
+
+
+                    <div class="control-group">
+                        <div class="controls">
+
+                            <button type="submit" class="btn btn-motive btn-form">создать</button>
                         </div>
+                    </div>
+                    <label class="checkbox-container">
+                        Опубликовать этот пост анонимно на <a href="https://www.facebook.com/AquariumForum/" target="_blank">странице
+                        форума в facebook</a>?
 
+                        {{ (form.facebook_post) }}
+                        <span class="checkmark"></span>
 
-                        <div class="control-group">
-                            <div class="controls">
-
-                                <button type="submit" class="btn btn-motive btn-form">создать</button>
-                            </div>
-                        </div>
-                     <label class="checkbox-container">
-                            Опубликовать этот пост анонимно на <a href="https://www.facebook.com/AquariumForum/">странице форума в facebook</a>?
-
-                                {{(form.facebook_post) }}
-                            <span class="checkmark"></span>
-
-                            </label>
+                    </label>
 
 
                     </form>
-
-
 
 
                 </div>
@@ -85,23 +141,31 @@
     </section>
 
 
-<script>
-$(".tags textarea").on("input",function () {
-    var menu_id = $(this).parent().parent().parent().parent().prop("id");
+    <script>
+        $(".tags textarea").on("input", function () {
+            var menu_id = $(this).parent().parent().parent().parent().prop("id");
 
-    $("body").on("click", function () {
-        $('.dropdown-menu').hide();
-    });
-    var letter = $(this).val();
-    $.post($SCRIPT_ROOT + '/add_post', {letter: letter}, function (data) {
-        $('#' + menu_id + '.dropdown-menu').html(data.tags_menu);
-        console.log('#' + menu_id + '.dropdown-menu');
-        $('#' + menu_id + '.dropdown-menu').show();
+            $("body").on("click", function () {
+                $('.dropdown-menu').hide();
+            });
+            var letter = $(this).val();
+            $.post($SCRIPT_ROOT + '/add_post', {letter: letter}, function (data) {
+                $('#' + menu_id + '.dropdown-menu').html(data.tags_menu);
+                console.log('#' + menu_id + '.dropdown-menu');
+                $('#' + menu_id + '.dropdown-menu').show();
+
+            });
+
+
+        });
+        $(".form_edited").submit(function () {
+            $(".form_edited .edited-textarea").val($("#page").html());
+
 
         });
 
+    </script>
+    <script type="text/javascript" src="{{ url_for ('static', filename= "js/text-editor.js") }}" acync></script>
 
-})
-</script>
 
 {% endblock %}
