Google adwords conversions

--- a/templates/security/register_user.html
+++ b/templates/security/register_user.html
@@ -2,6 +2,17 @@
 {% extends "base.html" %}
 {% from "helpers.html" import render_field_with_errors, render_field %}
 {% include "security/_messages.html" %}
+{% block adwords_script %}
+
+
+
+<!-- Event snippet for Аквариум conversion page -->
+<script>
+  gtag('event', 'conversion', {'send_to': 'AW-813375177/pjm_CJSjoocBEMm97IMD'});
+</script>
+
+
+{% endblock %}
 {% block body %}
  <section class="ct-u-paddingBottom80">
 <div class="container">
