--- a/templates/mails/notification_mail.html
+++ b/templates/mails/notification_mail.html
@@ -28,4 +28,4 @@
     <a href="{{ url_for("profile_settings",  _external = True )}}">настройки профиля</a>
 </p>
 
-<p>   С найлучшими пожеланиеми, форум аквариумистики</p>
+<p>   С наилучшими пожеланиями, форум аквариумистики</p>
